Tp1/error.txt
ex2.c: In function ‘main’:
ex2.c:6:1: error: expected ‘;’ before ‘}’ token
 }
 ^
